--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lkt-icon",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "type": "module",
   "module": "./dist/build.js",
@@ -13,7 +13,7 @@
     "./theme/default": "./theme/default.css",
     "./theme/lkt-alt-1": "./theme/lkt-alt-1.css"
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/build.d.ts",
   "files": [
     "dist/*",
     "src/**/*.vue",
